# cplusplus-cicd-example

./: .gitlab-ci.yml  CMakeLists.txt  README.md  cplus-deploy.md  trivy-scanner.md
src/: calculator.cpp  main.cpp
tests/: calculator_test.cpp
